Removed widths from panels to avoid an x-overflow.

--- a/data_clump_flow_app/dataflow.css
+++ b/data_clump_flow_app/dataflow.css
@@ -533,7 +533,6 @@ li ol>li:before {
   position: relative;
   top: 20px;
   text-align: right;
-  width: 95%;
   max-width: 400px;
   z-index: 1;
 }
@@ -546,7 +545,6 @@ li ol>li:before {
   padding-bottom: 15px;
   padding-top: 40px;
   position: relative;
-  width: 97%;
 }
 .info-panel-sub.settings {
   padding-top: 30px;
